# advent-of-code

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
2015/: day1.js  day1.ts  day10.js  day11.js  day14.js  day15.js  day4.js  day5.js  day6.js  day7.js  day9.js
2016/: day2.js  day4.js  day5.js  day7.ts  day8.ts
2017/: day1.js  day2.js  day3.js  day5.js
2018/: day1.js  day2.js  day3.js  day5.js
2019/: day1.js  day2.js  day3.js  day4.js  day5.js  day6.js  day7.js  day8.js  day9.js
2020/: day17.js  day2.js  day3.js  day4.js  day6.js  day7.js  day8.js  day9.js
2021/: day1.js  day10.js  day11.js  day12.js  day13-input  day13.js  day14.js  day15.js  day16.js  day2.js  day3.js  day4.js  day5.js  day6.js  day8.js
c/: package.json
go/: devenv.nix  go.mod  package.json
lib/: FileReader.js  FileStream.js  FileStream.ts  Graph.ts  IncrementorMap.js  IncrementorMap.ts  Line.js  Map2D.js  Map2D.ts  NestedMap.ts  Polygon.js  Vector2.js  downloadInput.js  downloadInput.ts  utils.js  utils.ts
nim/: .gitignore  .rtx.toml
nimlang/: README.md  package.json
python/: .gitignore  .pylintrc  .setup  README.md  mypy.ini  package.json  requirements-dev.txt  requirements.txt
rescript/: README.md  bsconfig.json  package.json
rust/: .gitignore  Cargo.toml  README.md  package.json
rust/.cargo/: config
rust/src/: helpers.rs  lib.rs  main.rs
rust/src/years/2015/: day1.rs
rust/years/2015/: day1.rs
scripts/: create.js  create.ts  test.js  test.ts
test/: test-mocha.js  test-mocha.ts
typescript/: README.md  (+5 more)
(+244 files in other folders)
