[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
include = ["years/**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"

[lib]
path = "years/2015/day1.rs"

[[bin]]
name = "day1"
path = "years/2015/day1.rs"
