[package]
name = "aoc"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Daniel Oakman"]
# default-run = "advent_of_code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
