[package]
name = "aoc"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Daniel Oakman"]
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
md5 = "0.7.0"
memoize = "0.4.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
